src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E203_E203.py.snap
---
source: src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    WhitespaceBeforeCommaSemicolonColon:
      value: ","
  location:
    row: 2
    column: 32
  end_location:
    row: 2
    column: 34
  fix:
    content:
      - ","
    location:
      row: 2
      column: 32
    end_location:
      row: 2
      column: 34
  parent: ~
- kind:
    WhitespaceBeforeCommaSemicolonColon:
      value: ;
  location:
    row: 3
    column: 22
  end_location:
    row: 3
    column: 24
  fix:
    content:
      - ;
    location:
      row: 3
      column: 22
    end_location:
      row: 3
      column: 24
  parent: ~
- kind:
    WhitespaceBeforeCommaSemicolonColon:
      value: ":"
  location:
    row: 4
    column: 9
  end_location:
    row: 4
    column: 11
  fix:
    content:
      - ":"
    location:
      row: 4
      column: 9
    end_location:
      row: 4
      column: 11
  parent: ~
- kind:
    WhitespaceBeforeCommaSemicolonColon:
      value: ","
  location:
    row: 6
    column: 15
  end_location:
    row: 6
    column: 17
  fix:
    content:
      - ","
    location:
      row: 6
      column: 15
    end_location:
      row: 6
      column: 17
  parent: ~

