src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E712_E712.py.snap
---
source: src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    TrueFalseComparison:
      - true
      - Eq
  location:
    row: 2
    column: 10
  end_location:
    row: 2
    column: 14
  fix:
    content: res is True
    location:
      row: 2
      column: 3
    end_location:
      row: 2
      column: 14
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - NotEq
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 15
  fix:
    content: res is not False
    location:
      row: 5
      column: 3
    end_location:
      row: 5
      column: 15
  parent: ~
- kind:
    TrueFalseComparison:
      - true
      - NotEq
  location:
    row: 8
    column: 3
  end_location:
    row: 8
    column: 7
  fix:
    content: True is not res
    location:
      row: 8
      column: 3
    end_location:
      row: 8
      column: 14
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - Eq
  location:
    row: 11
    column: 3
  end_location:
    row: 11
    column: 8
  fix:
    content: False is res
    location:
      row: 11
      column: 3
    end_location:
      row: 11
      column: 15
  parent: ~
- kind:
    TrueFalseComparison:
      - true
      - Eq
  location:
    row: 14
    column: 13
  end_location:
    row: 14
    column: 17
  fix:
    content: "res[1] is True"
    location:
      row: 14
      column: 3
    end_location:
      row: 14
      column: 17
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - NotEq
  location:
    row: 17
    column: 13
  end_location:
    row: 17
    column: 18
  fix:
    content: "res[1] is not False"
    location:
      row: 17
      column: 3
    end_location:
      row: 17
      column: 18
  parent: ~
- kind:
    TrueFalseComparison:
      - true
      - Eq
  location:
    row: 20
    column: 19
  end_location:
    row: 20
    column: 23
  fix:
    content: cond is True
    location:
      row: 20
      column: 11
    end_location:
      row: 20
      column: 23
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - Eq
  location:
    row: 20
    column: 43
  end_location:
    row: 20
    column: 48
  fix:
    content: cond is False
    location:
      row: 20
      column: 35
    end_location:
      row: 20
      column: 48
  parent: ~
- kind:
    TrueFalseComparison:
      - true
      - Eq
  location:
    row: 22
    column: 4
  end_location:
    row: 22
    column: 8
  fix:
    content: True is TrueElement
    location:
      row: 22
      column: 3
    end_location:
      row: 22
      column: 24
  parent: ~
- kind:
    TrueFalseComparison:
      - true
      - Eq
  location:
    row: 25
    column: 10
  end_location:
    row: 25
    column: 14
  fix:
    content: res is True is not False
    location:
      row: 25
      column: 3
    end_location:
      row: 25
      column: 23
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - NotEq
  location:
    row: 25
    column: 18
  end_location:
    row: 25
    column: 23
  fix:
    content: res is True is not False
    location:
      row: 25
      column: 3
    end_location:
      row: 25
      column: 23
  parent: ~

