src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E731_E731.py.snap
---
source: src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    DoNotAssignLambda: f
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 19
  fix:
    content: "def f(x):\n    return (2 * x)"
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 19
  parent: ~
- kind:
    DoNotAssignLambda: f
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 19
  fix:
    content: "def f(x):\n    return (2 * x)"
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 19
  parent: ~
- kind:
    DoNotAssignLambda: this
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 29
  fix:
    content: "def this(y, z):\n        return (2 * x)"
    location:
      row: 7
      column: 4
    end_location:
      row: 7
      column: 29
  parent: ~

