src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E999_E999.py.snap
---
source: src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    SyntaxError: unindent does not match any outer indentation level
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 0
  fix: ~
  parent: ~

